workshop04/deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-sts
  namespace: minio-ns
  labels:
    app: minio
    name: minio-sts
spec:
  replicas: 3
  selector:
    matchLabels:
      app: minio
      name: minio-po
  serviceName: minio-hsvc
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data-vol
      labels:
        app: minio
        name: minio-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: do-block-storage
      resources:
        requests:
          storage: 1Gi
  template:
    metadata:
      name: minio-po
      labels:
        app: minio
        name: minio-po
    spec:
      containers:
      - name: minio-container
        image: bitnami/minio:2023.9.23
        imagePullPolicy: IfNotPresent
        command:
        - minio
        - server
        - --address=:9000
        - --console-address=:9090
        - http://minio-sts-{0...2}.minio-hsvc.minio-ns.svc.cluster.local/data
        ports:
        - containerPort: 9000
        - containerPort: 9090
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          periodSeconds: 60
        volumeMounts:
        - name: data-vol
          mountPath: /data

---
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minio-ns
  labels:
    app: minio
    name: minio-hsvc
spec:
  clusterIP: None
  selector:
    app: minio
    name: minio-po
  ports:
    - port: 9000
      targetPort: 9000
      name: data
    - port: 9090
      targetPort: 9090
      name: console

---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio-ns
  labels:
    app: minio
    name: minio-svc
spec:
  type: ClusterIP
  selector:
    app: minio
    name: minio-po
  ports:
    - name: data
      port: 9000
      targetPort: 9000
    - name: console
      port: 9090
      targetPort: 9090
